--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
        </div>
         <div id="content-view">
            <a href="#" class="img_background">
-           <img src="/img/back_sujung.jpg" alt="content이미지">
+           <img src="img/back_sujung.jpg" alt="content이미지">
            </a>
         </div>
         <div id="contents">
-            <div class="frame">이미지박스1<img src="/img/background.jpg" alt=""></div>
+            <div class="frame">이미지박스1<img src="img/background.jpg" alt=""></div>
             <div class="frame">이미지박스2<img src="img/background.jpg"></div>
             <div class="frame">이미지박스3<img src="img/background.jpg"></div>
         </div>
